# safai-cli

./: .coverage  .gitignore  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
src/: config.py  pipeline.py
src/directory_handler/: handler.py
src/model_proxy/: __init__.py  claude.py  gemini.py  model_proxy.py  openai.py  shared.py
src/safai/: config.py  main.py  pipeline.py
src/safai/directory_handler/: __init__.py  handler.py
src/safai/model_proxy/: model_proxy.py  shared.py
tests/: test_cli.py  test_config_load.py
